<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/tv_current_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:fontFamily="@font/digital_mono"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:textColor="@color/black"
                android:textSize="@dimen/_40ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline"
                tools:text="10:00" />

            <TextView
                android:id="@+id/current_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:fontFamily="@font/digital_mono"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_current_time"
                tools:text="TUESDAY, 26 SEPTAMBER 2023" />

            <TextView
                android:id="@+id/tv_my_alarms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/linlegrey"
                android:gravity="center"
                android:paddingTop="@dimen/_5sdp"
                android:text="@string/my_alarms"
                android:textSize="@dimen/_40ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/current_date" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_alarms"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_my_alarms"
                tools:listitem="@layout/item_alarm" />

            <ImageView
                android:id="@+id/iv_empty"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/no_data"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_my_alarms" />

            <TextView
                android:id="@+id/tv_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/linlegrey"
                android:text="@string/no_alarms_found"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/iv_empty"
                app:layout_constraintStart_toStartOf="@id/iv_empty"
                app:layout_constraintTop_toBottomOf="@id/iv_empty" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_schedule_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                android:backgroundTint="@color/blue"
                android:contentDescription="@string/app_name"
                android:elevation="@dimen/_4sdp"
                android:outlineAmbientShadowColor="@color/black"
                android:outlineSpotShadowColor="@color/black"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/white"
                tools:targetApi="p" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.tuyenmonkey.mkloader.MKLoader
        android:id="@+id/mk_loader"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        app:mk_color="@color/black"
        app:mk_type="ClassicSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>